// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Board Default 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
    <button
      className="square"
      onClick={[Function]}
    />
  </div>
</div>
`;

exports[`Storyshots Board Fill Triangle 1`] = `
<div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
  <div
    className="board-row"
  >
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
    <button
      className="square"
      onClick={[Function]}
    >
      △
    </button>
  </div>
</div>
`;

exports[`Storyshots Moves Default 1`] = `
<ol>
  <li>
    <button
      onClick={[Function]}
    >
      Go to game start
    </button>
  </li>
</ol>
`;

exports[`Storyshots Square Circle 1`] = `
<button
  className="square"
>
  O
</button>
`;

exports[`Storyshots Square Cross 1`] = `
<button
  className="square"
>
  X
</button>
`;

exports[`Storyshots Square Default 1`] = `
<button
  className="square"
/>
`;
